# aiswre

./: .gitignore  CLAUDE.md  README.md  aiswre.py  config.yaml  config.yml  end_to_end_wf.py  end_to_end_wf_cfrrag.py  evaluation_metrics.ipynb  functions.txt  generate_eval_funcs.py  generated_actions.ipynb  main-copy-2.py  main-copy-3.py  main-copy.py  main.py  prompt_evaluation.py  pyproject.toml  rag_app.ipynb  rag_app.py  requirements.txt  run.sh  run_a_prompt.py  run_evals.py  serve.sh  test.py
.claude/: settings.local.json
aiswre/: __init__.py  prj_exception.py  prj_logger.py  run_evals.py  utils.py
aiswre.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
aiswre/components/: incose.py  preprocess.py  processors.py  prompteval.py
aiswre/components/rtm_review_agent_medtech/: core.py  nodes.py  pipeline.py
aiswre/components/rtm_review_agent_medtech_local/: README.md  __init__.py  nodes.py  pipeline.py
aiswre/components/tc_review_agent_medtech/: README.md  __init__.py  core.py  evaluators.py  pipeline.py
aiswre/components/tc_review_agent_medtech_local/: README.md  core.py  pipeline.py
aiswre/components/tc_review_agent_ollama/: README.md  __init__.py  evaluators.py  nodes.py  pipeline.py
aiswre/data/: df_0.xlsx  df_1.xlsx  df_2.xlsx  incose_guide_sections_df.xlsx  incose_guide_sections_df_1.xlsx  pizza_app_trace_matrix.xlsx  reqs_df_evaluation.xlsx  reqs_df_filt.xlsx  results_df.xlsx  results_df_evaluation_1.xlsx  software_requirements.xlsx  software_requirements_1.xlsx
aiswre/preprocess/: sectionalize.py
aiswre/promptemps/: template_inputs.csv  templates_invoked.csv
aiswre/promptengg/: build_templates.py  prompt_evaluation.py  prompteval.py  promptrunner.py
aiswre/prompts/: old base prompt templates.txt  system_test_A.txt  system_test_B.txt  system_test_G.txt  system_test_prewarm.txt  user_test_B.txt
aiswre/templates/: templates.csv
aiswre/utils/: pd_utils.py  prompt_utils.py
notebooks/: MedicalApp_Traceability_Dataset.xlsx  agentic_loop.ipynb  create_dataset.ipynb  create_incose_prompts.ipynb  dataset_generation.ipynb  example_usage.ipynb  example_usage_case_study.ipynb  pre_warming.ipynb  prompt_processor_ollama.ipynb  prompt_processor_ollama_towardsdev_article.ipynb  rate_limit_testing.ipynb  requirement_review.ipynb  requirement_review_loop.ipynb  run_ollama_prompt_processor.ipynb  test_case_review_langgraph_ollama.ipynb  test_case_review_langgraph_ollama_async.ipynb
outputs/run-2025-12-22-10-55-05/: reviewed_requirements.xlsx
scripts/: agentic_loop.py  case_study.py  generated_eval_funcs_final.xlsx  make_dataset.py  ollama_prompt_processor.py  ollama_prompt_processor_rag.py  plotter.py  prompts.py  readme_medtech_local_reviewer_example.py  readme_medtech_reviewer_example.py  readme_req_reviewer_example.py  readme_req_reviewer_local_example.py  readme_rtm_reviewer_example.py  readme_tc_reviewer_example.py  requirements_processor.py  test-rtm-medtech-simple.py  testcases.xlsx
shell/: basic_setup_for_ollama.sh  gpus_setup_for_ollama.sh  run_requirements_project.sh  setup.sh
src/: pd_utils.py  prj_logger.py  utils.py
src/components/: clean.py  clients.py  incose.py  preprocess.py  processor.py  processors.py  prompteval.py  promptprocessor.py  promptrunner.py  reqtracer_base.py  sectionalize.py  workflow.py
src/components/rtm_review_agent_medtech_local/: README.md  core.py  evaluators.py
src/components/tc_review_agent/: core.py  evaluators.py  nodes.py  pipeline.py
src/components/tc_review_agent_medtech/: README.md  nodes.py  pipeline.py
src/components/tc_review_agent_medtech_local/: README.md  __init__.py  core.py  evaluators.py  (+2 more)
src/data/: demo_dataset.xlsx  df_0.xlsx  df_1.xlsx  df_2.xlsx  evals_config.txt  extract-post-clean.txt  incose_guide_sections_df.xlsx  initial_eval_df.xlsx  passed_reqs_df_2.xlsx  reqs_df_w_revisions.xlsx  reqs_df_with_revisions.xlsx  results.xlsx  revisions_df.xlsx  software_requirements.xlsx  software_requirements_1.xlsx  software_requirements_2.xlsx
src/prompts/: system_test_D.txt  system_test_E.txt  system_test_F.txt  system_test_H.txt  user_test_C.txt  user_test_D.txt  user_test_F.txt  user_test_H.txt  user_test_prewarm.txt
(+66 files in other folders)
